Added Filte Blog Page

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -289,7 +289,8 @@
         "title": "مدونة عيادة الدكتور سيرج تونيتسكي: أخبار، مقالات خبراء، شهادات فيديو، وإجابات على الأسئلة",
         "seoTitle": "مدونة الوسائط - عيادة الدكتور سيرج تونيتسكي",
         "seoDescription": "تصفح مجموعتنا الشاملة من الأخبار والمقالات الخبيرة وشهادات الفيديو والإجابات على الأسئلة المتداولة حول الجراحة والعلاجات النسائية.",
-        "noPosts": "لا توجد منشورات متاحة في الوقت الحالي."
+        "noPosts": "لا توجد منشورات متاحة في الوقت الحالي.",
+        "allCategories": "الكل"
     },
     "pagination": {
         "prev": "السابق",
