--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -305,7 +305,8 @@
     "title": "Dr. Serge Tunitski Clinic Blog: News, Expert Articles, Video Testimonials, and Q&A",
     "seoTitle": "Media Blog - Dr. Serge Tunitski Clinic",
     "seoDescription": "Browse our comprehensive collection of news, expert articles, video testimonials, and answers to frequently asked questions about gynecological surgery and treatments.",
-    "noPosts": "No posts available at the moment."
+    "noPosts": "No posts available at the moment.",
+    "allCategories": "All"
   },
   "pagination": {
     "prev": "Previous",
