--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -305,7 +305,8 @@
         "title": "Блог клиники Doctor Serge Tunitski: Новости, Экспертные статьи, Видео Отзывы и Ответы на вопросы",
         "seoTitle": "Медиа Блог - Клиника Доктора Сергея Туницкого",
         "seoDescription": "Просмотрите нашу полную коллекцию новостей, экспертных статей, видео отзывов и ответов на часто задаваемые вопросы о гинекологических операциях и лечении.",
-        "noPosts": "На данный момент постов нет."
+        "noPosts": "На данный момент постов нет.",
+        "allCategories": "Все"
     },
     "pagination": {
         "prev": "Предыдущая",
