--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -289,7 +289,8 @@
     "title": "Blog de la Clínica del Doctor Serge Tunitski: Noticias, Artículos de Expertos, Testimonios en Video y Respuestas a Preguntas",
     "seoTitle": "Blog de Medios - Clínica del Dr. Serge Tunitski",
     "seoDescription": "Explore nuestra colección completa de noticias, artículos de expertos, testimonios en video y respuestas a preguntas frecuentes sobre cirugía ginecológica y tratamientos.",
-    "noPosts": "No hay publicaciones disponibles en este momento."
+    "noPosts": "No hay publicaciones disponibles en este momento.",
+    "allCategories": "Todos"
   },
   "pagination": {
     "prev": "Anterior",
