--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -289,7 +289,8 @@
     "title": "בלוג המרפאה של ד״ר סרגיי טוניצקי: חדשות, מאמרים מקצועיים, המלצות וידאו ותשובות לשאלות",
     "seoTitle": "בלוג מדיה - מרפאת ד״ר סרגיי טוניצקי",
     "seoDescription": "עיין באוסף המקיף שלנו של חדשות, מאמרים מקצועיים, המלצות וידאו ותשובות לשאלות נפוצות על ניתוחים וטיפולים גינקולוגיים.",
-    "noPosts": "אין פוסטים זמינים כרגע."
+    "noPosts": "אין פוסטים זמינים כרגע.",
+    "allCategories": "הכל"
   },
   "pagination": {
     "prev": "הקודם",
